k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 2 # Haute disponibilité
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: nginx:latest
          ports:
            - containerPort: 4005
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
  labels:
    internal: "true"
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: http
      protocol: TCP
      port: 4005
      targetPort: 4005
