k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: nginx:latest
          ports:
            - containerPort: 4003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
  labels:
    internal: "true"  # Marqué comme interne
spec:
  type: ClusterIP  # Non exposé publiquement
  selector:
    app: moderation
  ports:
  - name: http
    protocol: TCP
    port: 4003
    targetPort: 4003
